--- a/sdgangularoct/package.json
+++ b/sdgangularoct/package.json
@@ -33,6 +33,7 @@
     "rxjs": "~7.4.0",
     "sweetalert2": "^11.10.1",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
